--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -4,7 +4,7 @@ parameters:
     database_port:     ~
     database_name:     mathsup
     database_user:     root
-    database_password: ~
+    database_password: root
 
     mailer_transport:  gmail
     mailer_host:       ~
