--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -29,14 +29,43 @@ twig:
         resources:
             - 'MspUserBundle:Form:fields.html.twig'
 
+bc_bootstrap:
+    less_filter: lessphp
+    jquery_path: %kernel.root_dir%/../vendor/jquery/jquery/jquery-1.9.1.js
+    
 # Assetic Configuration
 assetic:
     debug:          %kernel.debug%
     use_controller: false
-    bundles:        [ ]
+    bundles:        [ 'MspFrontendBundle', 'MspUserBundle' ]
     #java: /usr/bin/java
     filters:
+        lessphp:
+            file: %kernel.root_dir%/../vendor/leafo/lessphp/lessc.inc.php
+            apply_to: "\.less$"
         cssrewrite: ~
+    assets:   
+        img_bootstrap_glyphicons_black:
+            inputs:
+                -  "%kernel.root_dir%/../vendor/twbs/bootstrap/img/glyphicons-halflings.png"
+            output: "img/glyphicons-halflings.png"
+
+        img_bootstrap_glyphicons_white:
+            inputs:
+                -  "%kernel.root_dir%/../vendor/twbs/bootstrap/img/glyphicons-halflings-white.png"
+        output: "img/glyphicons-halflings-white.png"
+
+        bootstrap_css:
+            inputs:
+                -  "%kernel.root_dir%/../vendor/twbs/bootstrap/less/bootstrap.less"
+            output: "css/bootstrap.css"
+            filters:
+                - lessphp
+        jquery_ui:
+            inputs:
+                - %kernel.root_dir%/../vendor/jquery/jquery-ui/jquery-ui.min.js
+            output: js/jquery-ui.js
+
         #closure:
         #    jar: %kernel.root_dir%/Resources/java/compiler.jar
         #yui_css:
